# mini-dns-api

./: .gitattributes  .gitignore  .pre-commit-config.yaml  DEV_GUIDE.md  LICENSE  README.md  TESTING_GUIDE.md  coverage.xml  help.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.in  requirements.txt  test_entrypoint.py  test_output.txt  todo.md
.github/workflows/: ci.yml
.windsurf/rules/: global-rules.md  pythom-313-fastapi.md
app/: __init__.py  main.py
app/api/: __init__.py  dns.py
app/api/v1/: __init__.py
app/core/: __init__.py  database.py  exceptions.py  resolver.py  settings.py  tasks.py  validators.py
app/crud/: __init__.py
app/models/: __init__.py  base.py  host.py  record.py
app/schemas/: __init__.py
app/services/: __init__.py
docs/: architecture.md
examples/: api_examples.bat  api_examples.sh  requirements.txt
mini_dns_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
postman/: mini-dns-api.postman_collection.json
scripts/: test_entrypoint.py
tests/: __init__.py  conftest.py  test_hosts.py  test_records.py  test_resolution.py  test_utils.py
